fixed header icon on mobile

--- a/frontend/static/src/styles/headerfooter.css
+++ b/frontend/static/src/styles/headerfooter.css
@@ -44,38 +44,45 @@
 
 .logo-link-box {
     flex-grow: 1;
-    margin-right: 1rem;
 }
 
 .logo-link {
-    width: fit-content;
+    display: flex;
+    align-items: center;
+    min-width: 13rem;
     font-size: 2rem;
     font-weight: 600;
 }
 
 .chair-icon {
-    height: 3rem;
-    width: 3rem;
-    margin: 0 0 0 0.5rem;
+    height: 2.5rem;
+    width: 2.5rem;
+    margin: 0 0 0 0.3rem;
 }
 
 .create-event-nav {
     position: relative;
     border-radius: 0.5rem;
     border: none;
-    font-size: 1.2rem;
+    font-size: 100%;
     font-weight: 600;
     background-color: var(--orange);
     color: #000;
     padding: 0.5rem 0.75rem;
-    margin: 0 1rem;
-    min-width: 10.5rem;
+    margin: 0 1rem 0 0.5rem;
+    white-space: nowrap;
+    aspect-ratio: 8 / 1;
+    /* min-width: 10.5rem; */
 }
 
 .create-event-nav * {
     display: inline-block;
     margin: 0;
 }
+
+/* .create-event-nav p {
+    margin: 0 0.5rem 0 0;
+} */
 
 .create-event-nav:hover {
     filter: brightness(115%);
